src/validation/tests/snapshots/rusty__validation__tests__enum_validation_test__enum_variants_mismatch.snap
---
source: src/validation/tests/enum_validation_test.rs
expression: diagnostics
---
error: Consider using enum variants rather than literal integers
   ┌─ <internal>:18:31
   │
18 │                 localState := 0;
   │                               ^ Consider using enum variants rather than literal integers

error: Consider using enum variants rather than literal integers
   ┌─ <internal>:19:31
   │
19 │                 localState := 100;
   │                               ^^^ Consider using enum variants rather than literal integers

error: Consider using enum variants rather than literal integers
   ┌─ <internal>:24:26
   │
24 │                 color := 0;
   │                          ^ Consider using enum variants rather than literal integers

error: Consider using enum variants rather than literal integers
   ┌─ <internal>:25:26
   │
25 │                 color := 1;
   │                          ^ Consider using enum variants rather than literal integers

error: Consider using enum variants rather than literal integers
   ┌─ <internal>:26:26
   │
26 │                 color := 2;
   │                          ^ Consider using enum variants rather than literal integers

error: Enums are of different kind, consider using the same enum for assignments
   ┌─ <internal>:28:26
   │
28 │                 color := State.Idle;    // State.Idle == 0 == Color.Red
   │                          ^^^^^^^^^^ Enums are of different kind, consider using the same enum for assignments

error: Enums are of different kind, consider using the same enum for assignments
   ┌─ <internal>:29:31
   │
29 │                 localState := red;      // Color.Red  == 0 == State.Idle
   │                               ^^^ Enums are of different kind, consider using the same enum for assignments

error: Invalid integer value; valid values are [0, 1, 2] got 99
   ┌─ <internal>:38:26
   │
38 │                 color := 99;
   │                          ^^ Invalid integer value; valid values are [0, 1, 2] got 99

error: Invalid integer value; valid values are [0, 1, 2] got 100
   ┌─ <internal>:39:26
   │
39 │                 color := State.Working;
   │                          ^^^^^^^^^^^^^ Invalid integer value; valid values are [0, 1, 2] got 100

error: Invalid integer value; valid values are [0, 1, 2] got 99
   ┌─ <internal>:40:26
   │
40 │                 color := invalidReferenceForEnum;
   │                          ^^^^^^^^^^^^^^^^^^^^^^^ Invalid integer value; valid values are [0, 1, 2] got 99

error: Value of main.color is evaluated at run-time, can not safely verify if value is bound in (red := 0, green := 1, blue := 2)
   ┌─ <internal>:41:26
   │
41 │                 color := foo(); // Value of `foo()` unknown, might be outside of variants range
   │                          ^^^^^^ Value of main.color is evaluated at run-time, can not safely verify if value is bound in (red := 0, green := 1, blue := 2)

error: Invalid integer value; valid values are [0, 100] got 99
   ┌─ <internal>:43:31
   │
43 │                 localState := 99;
   │                               ^^ Invalid integer value; valid values are [0, 100] got 99

error: Invalid integer value; valid values are [0, 100] got 1
   ┌─ <internal>:44:31
   │
44 │                 localState := green;
   │                               ^^^^^ Invalid integer value; valid values are [0, 100] got 1

error: Invalid integer value; valid values are [0, 100] got 2
   ┌─ <internal>:45:31
   │
45 │                 localState := blue;
   │                               ^^^^ Invalid integer value; valid values are [0, 100] got 2

error: Invalid integer value; valid values are [0, 100] got 99
   ┌─ <internal>:46:31
   │
46 │                 localState := invalidReferenceForEnum;
   │                               ^^^^^^^^^^^^^^^^^^^^^^^ Invalid integer value; valid values are [0, 100] got 99


